--- a/Code.ipynb
+++ b/Code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PROJET 6 - DÉTECTER LES FAUX BILLETS"
+    "# DÉTECTER LES FAUX BILLETS"
    ]
   },
   {
